unpackaged/main/default/objects/Certification_Assignment__c/Certification_Assignment__c.object-meta.xml
<CustomObject>
    <label>Certification Assignment</label>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certification Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>