unpackaged/main/default/objects/Certification_Assignment__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certification</label>
    <referenceTo>Certification__c</referenceTo>
    <relationshipLabel>Certification Assignments</relationshipLabel>
    <relationshipName>Certification_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>