unpackaged/main/default/objects/Certification_Assignment__c/fields/Certification_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Certification_Requirement__c</fullName>
    <label>Certification Requirement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Certification__c</field>
            <operation>equals</operation>
            <valueField>Certification_Requirement__c.Certification__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Certification_Requirement__c</referenceTo>
    <relationshipLabel>Certification Assignments</relationshipLabel>
    <relationshipName>Certification_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>