unpackaged/main/default/objects/Certification_Assignment__c/fields/Date_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Date_Assigned__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Date Assigned</label>
    <type>Date</type>
</CustomField>