unpackaged/main/default/objects/Certification_Assignment__c/fields/Expires_On__c.field-meta.xml
<CustomField>
    <fullName>Expires_On__c</fullName>
    <label>Expires On</label>
    <type>Date</type>
</CustomField>